# ai-trap-linux

./: .gitignore  .gitmodules  CLAUDE.md  README.md  data_flow_strategy.md  make_presentation.py  make_task_diagram.py  meson.build  meson_options.txt  trap_config.toml
.github/workflows/: build-esp32p4.yml  build-luckfox.yml  build-pi5.yml  cmake-multi-platform.yml  convert-model.yml
cross/: luckfox-rv1106.cmake  luckfox-rv1106.ini  pi5-aarch64.ini
docs/: API.md  DESIGN.md  acoustic_insect_detection.md  ble-gatt-interface.md  esp32-p4-insect-trap-architecture.md  esp32-p4-runtime-architecture.md  luckfox-install-guide.md  luckfox-rknn-npu.md  md_to_pdf.py
docs/esp32-p4/: esp32-p4-ai-evaluation.md  esp32-p4-firmware-guide.md  esp32-p4-model-workflow.md
docs/general/: API.md
docs/luckfox/: luckfox-development-guide.md  luckfox-eink-wiring.md  luckfox-rknn-npu.md  luckfox-software-architecture.md  rv1106-isp-npu-coexistence.md
docs/research/: insect_acoustic_detection.md  ir_beam_matrix.md
firmware/: main_libcamera.cpp  main_rkmpi.cpp  main_v4l2.cpp
firmware-esp32p4/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
firmware-esp32p4/main/: CMakeLists.txt  app_main.cpp  camera_task.cpp  camera_task.h  idf_component.yml  inference_task.cpp  inference_task.h  ov5647.cpp  ov5647.h  pipeline.h  power_task.cpp  power_task.h  radio_task.cpp  radio_task.h  trap_config.h
firmware-esp32p4/ulp/: ulp_pir_monitor.c
firmware/models/: README.md
firmware/src/common/: ble_ctrl.cpp  ble_ctrl.h  ble_gatt_server.cpp  ble_gatt_server.h  config_loader.h  epaper_display.cpp  epaper_display.h  float_mat.h  imgproc.h  wifi_manager.cpp  wifi_manager.h
firmware/src/io/: libcamera_capture.cpp  libcamera_capture.h  rkaiq_minimal.h  rkmpi_capture.cpp  rkmpi_capture.h  rknn_infer.cpp  rknn_infer.h  v4l2_capture.cpp  v4l2_capture.h
firmware/src/pipeline/: crop_saver.cpp  decoder.cpp  decoder.h  sync_manager.cpp  sync_manager.h
firmware/src/server/: http_server.cpp  http_server.h  mjpeg_streamer.cpp  mjpeg_streamer.h  sse_server.cpp
package/: ai-trap.service  install.sh
package/config/: trap_config.toml
package/luckfox/: S50wifi  S99trap  install.sh  trap_config.toml
package/pi5/: ai-trap-ble.service  ble_gatt.py
package/systemd/: ai-trap.service  camera-overlay.service
scripts/: Dockerfile.rknn-toolkit2  build-esp32p4-mac.sh  build-luckfox-ci.sh  build-luckfox-deps.sh  build-luckfox-mac.sh  build-rknpu-ko.sh  bundle-libcamera.sh  clion-compile-commands.sh  clion-esp32p4-compile-commands.sh  convert-rknn.sh  convert_rknn.py  deploy.sh  luckfox-firmware-fetch.sh  luckfox-flash.sh  luckfox-install.sh  luckfox-setup.sh  luckfox-wifi-setup.sh  make-package.sh
subprojects/: ncnn.wrap
