option('target',
  type    : 'combo',
  choices : ['libcamera', 'v4l2', 'all'],
  value   : 'libcamera',
  description : 'Which capture backend to build: libcamera (Pi 5), v4l2 (Luckfox Pico Zero), or all'
)

option('luckfox_sysroot',
  type    : 'string',
  value   : '',
  description : 'Path to sysroot with cross-compiled NCNN/SQLite3 for RV1106. Overrides sys_root in cross/luckfox-rv1106.ini. Leave empty to use the cross file defaults.'
)
