option('target',
  type    : 'combo',
  choices : ['libcamera', 'v4l2', 'all'],
  value   : 'libcamera',
  description : 'Which capture backend to build: libcamera (Pi 5), v4l2 (Luckfox Pico Zero), or all'
)

option('luckfox_sysroot',
  type    : 'string',
  value   : '',
  description : 'Path to sysroot with cross-compiled NCNN/SQLite3 for RV1106. Overrides sys_root in cross/luckfox-rv1106.ini. Leave empty to use the cross file defaults.'
)

option('pi5_sysroot',
  type    : 'string',
  value   : '',
  description : 'Path to sysroot with cross-compiled NCNN/SQLite3 for Raspberry Pi 5 (aarch64). libcamera is expected at the standard multiarch path (/usr/lib/aarch64-linux-gnu). Leave empty to use system pkg-config discovery.'
)

option('use_rknn',
  type    : 'boolean',
  value   : false,
  description : 'Replace ncnn inference with the Rockchip RKNN NPU runtime (librknnrt). Requires rknn_api.h and librknnrt.so in the Luckfox sysroot. Only valid with -Dtarget=v4l2.'
)
