option('target',
  type    : 'combo',
  choices : ['libcamera', 'v4l2', 'all'],
  value   : 'libcamera',
  description : 'Which capture backend to build: libcamera (Pi 5), v4l2 (Luckfox Pico Zero), or all'
)

option('luckfox_sysroot',
  type    : 'string',
  value   : '',
  description : 'Path to sysroot with cross-compiled SQLite3/librknnmrt for RV1106. Overrides sys_root in cross/luckfox-rv1106.ini. Leave empty to use the cross file defaults.'
)

option('pi5_sysroot',
  type    : 'string',
  value   : '',
  description : 'Path to sysroot with cross-compiled SQLite3 for Raspberry Pi 5 (aarch64). libcamera is expected at the standard multiarch path (/usr/lib/aarch64-linux-gnu). Leave empty to use system pkg-config discovery.'
)

